--- a/src/SQLite-net.csproj
+++ b/src/SQLite-net.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageId>sqlite-net-pcl</PackageId>
-    <VersionPrefix>1.4.0</VersionPrefix>
-    <Authors>praeclarum</Authors>
-    <Title>SQLite-net Official Portable Library</Title>
+    <PackageId>sqlite-net-standard</PackageId>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.5.0</Version>
+    <AssemblyVersion>1.5.0</AssemblyVersion>
+    <FileVersion>1.5.0</FileVersion>
+    <Authors>@evertons4nt0s</Authors>
+    <Title>SQLite-net for NetStandard</Title>
     <Description>SQLite-net is an open source and light weight library providing easy SQLite database storage for .NET, Mono, and Xamarin applications. This version uses SQLitePCLRaw to provide platform independent versions of SQLite.</Description>
     <PackageTags>sqlite;pcl;database;orm;mobile;xamarin;db</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/praeclarum/sqlite-net/master/Logo-low.png</PackageIconUrl>
@@ -13,8 +16,8 @@
     <RepositoryUrl>https://github.com/praeclarum/sqlite-net.git</RepositoryUrl>
 
     <TargetFramework>netstandard1.1</TargetFramework>
-
     <DefineConstants>USE_SQLITEPCL_RAW;USE_NEW_REFLECTION_API;NO_CONCURRENT</DefineConstants>
+    <RootNamespace>SQLite</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
